@@ -847,6 +847,9 @@ Documentation
 Tests
 -----
 
+- The four path modules (genericpath, macpath, ntpath, posixpath) share a
+  common TestCase for some tests: test_genericpath.CommonTest.
+
 - Print platform information when running the whole test suite, or using
   the --verbose flag.
 
